--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
 			<div class="box221"><a href=""><img src="img/1(1).jpg" alt=""></a></div>
 			<div class="box221"><a href=""><img src="img/2.jpg" alt=""></a></div>
 			<div class="box221"><a href=""><img src="img/3(1).png" alt=""></a></div>
-			<div class="box221"><a href=""><img src="img/qqq.png" alt=""></a></div>
+			<div class="box221"><a href="1.html"><img src="img/qqq.png" alt=""></a></div>
 			</div>
 		</div>
 		<!--box3-->
